--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,8 @@
 # in `lib/` subdirectory.
 #
 # Note: The `lib` directory is added to `sys.path` by `appengine_config.py`.
-Flask==0.10
-gspread==0.3.0
+Flask==1.0.2
+gspread==0.3.1
 oauth2client==2.0.0.post1
 arrow==0.7.0
+gunicorn
